--- a/headings.html
+++ b/headings.html
@@ -10,6 +10,18 @@
   </head>
   
   <body>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="headings.html">Heading Demo</a></li>
+        <li><a href="textdemo.html">Text Demo</a></li>
+        <li><a href="unorderedlists.html">Unordered List Demo</a></li>
+        <li><a href="orderedlist.html">Ordered List Demo</a></li>
+        <li><a href="tableDemo1.html">Table Demo 1</a></li>
+        <li><a href="tableDemo2.html">Table Demo 2 - Pets</a></li>
+      </ul>
+    </nav>
+
     <!--Headings demo-->
     <h1>This is a level 1 heading</h1>
     <h2>This is a level 2 heading</h2>
