--- a/orderedlist.html
+++ b/orderedlist.html
@@ -5,6 +5,18 @@
     </title>
   </head>
   <body>
+    <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="headings.html">Heading Demo</a></li>
+          <li><a href="textdemo.html">Text Demo</a></li>
+          <li><a href="unorderedlists.html">Unordered List Demo</a></li>
+          <li><a href="orderedlist.html">Ordered List Demo</a></li>
+          <li><a href="tableDemo1.html">Table Demo 1</a></li>
+          <li><a href="tableDemo2.html">Table Demo 2 - Pets</a></li>
+        </ul>
+      </nav>
+      
     <h1>This is a demo of a Numbered List</h1>
     <ol>
         <li>Item</li>
