--- a/tableDemo1.html
+++ b/tableDemo1.html
@@ -5,6 +5,18 @@
     </title>
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="headings.html">Heading Demo</a></li>
+        <li><a href="textdemo.html">Text Demo</a></li>
+        <li><a href="unorderedlists.html">Unordered List Demo</a></li>
+        <li><a href="orderedlist.html">Ordered List Demo</a></li>
+        <li><a href="tableDemo1.html">Table Demo 1</a></li>
+        <li><a href="tableDemo2.html">Table Demo 2 - Pets</a></li>
+      </ul>
+    </nav>
+    
     <center>
         <h1>Table Demo</h1>
         <table border="1">
