--- a/textdemo.html
+++ b/textdemo.html
@@ -5,6 +5,17 @@
     </title>
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="headings.html">Heading Demo</a></li>
+        <li><a href="textdemo.html">Text Demo</a></li>
+        <li><a href="unorderedlists.html">Unordered List Demo</a></li>
+        <li><a href="orderedlist.html">Ordered List Demo</a></li>
+        <li><a href="tableDemo1.html">Table Demo 1</a></li>
+        <li><a href="tableDemo2.html">Table Demo 2 - Pets</a></li>
+      </ul>
+    </nav>
     <center>
         <h1>This is a demo of different types of text in HTML</h1>
         <h2>Bolded Text</h2>
