--- a/tableDemo1.html
+++ b/tableDemo1.html
@@ -14,9 +14,10 @@
         <li><a href="orderedlist.html">Ordered List Demo</a></li>
         <li><a href="tableDemo1.html">Table Demo 1</a></li>
         <li><a href="tableDemo2.html">Table Demo 2 - Pets</a></li>
+        <li><a href="cssdemo.html">CSS Demo</a></li>
       </ul>
     </nav>
-    
+
     <center>
         <h1>Table Demo</h1>
         <table border="1">
