--- a/travel.html
+++ b/travel.html
@@ -33,7 +33,25 @@
     </nav>
 
     <center>
+        <a href="media/BoraBora1.jpg">
         <img src="media/BoraBora1.jpg" title ="Bora Bora Image #1" alt="Bora Bora Image #1 width="400" height ="200">
+        </a>
+        <a href="media/BoraBora2.jpg">
+        <img src="media/BoraBora2.jpg" title ="Bora Bora Image #1" alt="Bora Bora Image #2 width="400" height ="200">
+        </a>
+        <a href="media/BoraBora3.jpg">
+        <img src="media/borabora3.jpg" title ="Bora Bora Image #1" alt="Bora Bora Image #3 width="400" height ="200">
+        </a>
+        <br>
+        <a href="media/BoraBora3.jpg">
+        <img src="media/borabora3.jpg" title ="Bora Bora Image #1" alt="Bora Bora Image #3 width="400" height ="200">
+        </a>
+        <a href="media/BoraBora2.jpg">
+        <img src="media/BoraBora2.jpg" title ="Bora Bora Image #1" alt="Bora Bora Image #2 width="400" height ="200">
+        </a>
+        <a href="media/BoraBora1.jpg">
+        <img src="media/BoraBora1.jpg" title ="Bora Bora Image #1" alt="Bora Bora Image #1 width="400" height ="200">
+        </a>
     </center>
 
   </body>
