--- a/travel.html
+++ b/travel.html
@@ -33,6 +33,11 @@
     </nav>
 
     <center>
+
+        <h1>Fannie's Dream Vacation Destination- Bora Bora in the French Polynesia</h1>
+        <h3>Click Each Image to View the Full-Size Version</h3>
+        <h3>Click the Video for a Tour of Bora Bora!!</h3>
+
         <a href="media/BoraBora1.jpg">
         <img src="media/BoraBora1.jpg" title ="Bora Bora Image #1" alt="Bora Bora Image #1 width="400" height ="200">
         </a>
@@ -42,6 +47,8 @@
         <a href="media/BoraBora3.jpg">
         <img src="media/borabora3.jpg" title ="Bora Bora Image #1" alt="Bora Bora Image #3 width="400" height ="200">
         </a>
+        <br>
+        <iframe width="862" height="315" src="https://www.youtube.com/embed/O_9TgmIg1nA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br>
         <a href="media/BoraBora3.jpg">
         <img src="media/borabora3.jpg" title ="Bora Bora Image #1" alt="Bora Bora Image #3 width="400" height ="200">
