--- a/orderedlist.html
+++ b/orderedlist.html
@@ -14,9 +14,10 @@
           <li><a href="orderedlist.html">Ordered List Demo</a></li>
           <li><a href="tableDemo1.html">Table Demo 1</a></li>
           <li><a href="tableDemo2.html">Table Demo 2 - Pets</a></li>
+          <li><a href="travel.html">Dream Vacation Page</a></li>
         </ul>
       </nav>
-      
+
     <h1>This is a demo of a Numbered List</h1>
     <ol>
         <li>Item</li>
