--- a/cssdemo.html
+++ b/cssdemo.html
@@ -13,19 +13,39 @@
     -->
   </head>
   <body>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="headings.html">Heading Demo</a></li>
-        <li><a href="textdemo.html">Text Demo</a></li>
-        <li><a href="unorderedlist.html">Unordered List Demo</a></li>
-        <li><a href="orderedlist.html">Ordered List Demo</a></li>
-        <li><a href="tableDemo1.html">Table Demo 1</a></li>
-        <li><a href="tableDemo2.html">Table Demo 2 - Pets</a></li>
-        <li><a href="cssdemo.html">CSS Demo</a></li>
-        <li><a href="travel.html">Dream Vacation Page</a></li>
+    <ul class="nav nav-pills nav-fill">
+        <li class="nav-item">
+            <a href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+            <a href="headings.html">Heading Demo</a>
+        </li>
+        <li class="nav-item">
+            <a href="textdemo.html">Text Demo</a>
+        </li>
+        <li class="nav-item">
+            <a href="unorderedlist.html">Unordered List Demo</a>
+        </li>
+        <li class="nav-item">
+            <a href="orderedlist.html">Ordered List Demo</a>
+        </li>
+        <li class="nav-item">
+            <a href="tableDemo1.html">Table Demo 1</a>
+        </li>
+        <li class="nav-item">
+            <a href="tableDemo2.html">Table Demo 2 - Pets</a>
+        </li>
+        <li class="nav-item">
+            <a hclass="nav-link active" aria-current="page" ref="cssdemo.html">CSS Demo</a>
+        </li>
+        <li class="nav-item">
+            <a  href="travel.html">Dream Vacation Page</a>
+        </li>
+        <li class="nav-item">
+            <a href="bootstrapdemo.html">Bootstrap Demo</a>
+        </li>
       </ul>
-    </nav>
+
     <h1 class = "blue">MAKE ME BLUE</h1>
     <h1 id = "purple">MAKE ME PURPLE</h1>
     <h1 class = "red">MAKE ME RED</h1>
@@ -33,5 +53,10 @@
     <h1 class="alignCenter">CENTER</h1>
     <h1 class="alignRight">RIGHT</h1>
     <h1 class="alignCenter white blackBackground">White Text on Black Background</h1>
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
