--- a/mediaQueryDemo.html
+++ b/mediaQueryDemo.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>
-      My Home Page
+      Media Query Demo
     </title>
 
           <!--to use external bootstrap use the following, CDN content delivery network-->
@@ -10,13 +10,14 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
     crossorigin="anonymous">
 
+    <link rel="stylesheet" href="boxstyle.css"
 
   </head>
   
   <body>
     <ul class="nav nav-pills nav-fill">
       <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          <a href="index.html">Home</a>
       </li>
       <li class="nav-item">
           <a href="headings.html">Heading Demo</a>
@@ -45,9 +46,19 @@
       <li class="nav-item">
           <a href="bootstrapdemo.html">Bootstrap Demo</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="mediaQueryDemo.html">Media Query Demo</a>
+    </li>
     </ul>
+
+    <center>
+        <h2>Media Query Demo</h2>
+        <h3>Change the width of the page to see changes in the page</h3>
+    </center>
     
-    <p>Welcome to my website!</p>
+    <div class="box greenbox"></div>
+
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
