lots of updates/changes

--- a/orderedlist.html
+++ b/orderedlist.html
@@ -23,7 +23,7 @@
             <a href="textdemo.html">Text Demo</a>
         </li>
         <li class="nav-item">
-            <a href="unorderedlist.html">Unordered List Demo</a>
+            <a href="unorderedlists.html">Unordered List Demo</a>
         </li>
         <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="orderedlist.html">Ordered List Demo</a>
