--- a/tableDemo1.html
+++ b/tableDemo1.html
@@ -26,7 +26,7 @@
           <a href="unorderedlist.html">Unordered List Demo</a>
       </li>
       <li class="nav-item">
-          <a href="orderedlist.html">Ordered List Demo</a>
+          <a href="orderedlists.html">Ordered List Demo</a>
       </li>
       <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="tableDemo1.html">Table Demo 1</a>
