--- a/mediaQueryDemo.html
+++ b/mediaQueryDemo.html
@@ -10,13 +10,14 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
     crossorigin="anonymous">
 
-    <link rel="stylesheet" href="boxstyle.css"
+    <link rel="stylesheet" href="boxstyle.css">
+    <link rel="stylesheet" href="navStyle.css">
 
   </head>
   
   <body>
     <!--primary nav (big screen nav)-->
-    <ul class="nav nav-pills nav-fill">
+    <ul class="nav nav-pills nav-fill primaryNav">
       <li class="nav-item">
           <a href="index.html">Home</a>
       </li>
@@ -53,7 +54,7 @@
     </ul>
 
     <!--secondary nav (small screen)-->
-    <div class="dropdown show">
+    <div class="dropdown show secondaryNav">
         <a class="btn btn-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Navigation List
         </a>
@@ -69,7 +70,7 @@
           <a class="dropdown-item" href="cssdemo.html">CSS Demo</a>
           <a class="dropdown-item" href="travel.html">Dream Vacation Page</a>
           <a class="dropdown-item" href="bootstrapdemo.html">Bootstrap Demo</a>
-          <a class="dropdown-item" href="mediaQueryDemo.html">Media Query Demo</a>
+          <a class="dropdown-item active" href="mediaQueryDemo.html">Media Query Demo</a>
         </div>
       </div>
 
