--- a/travel.html
+++ b/travel.html
@@ -20,6 +20,7 @@
 
     <!--External CSS-->
     <link rel="stylesheet" type="text/css" href="travelStyle.css">
+    <link rel="stylesheet" href="navStyle.css">
 
   </head>
   
