--- a/cssdemo.html
+++ b/cssdemo.html
@@ -11,6 +11,14 @@
         }
     </style>
     -->
+
+        <!--to use external bootstrap use the following, CDN content delivery network-->
+        <link rel="stylesheet"
+        href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+        crossorigin="anonymous">
+    
+        <link rel="stylesheet" href="navStyle.css">
   </head>
   <body>
     <ul class="nav nav-pills nav-fill">
