--- a/travel.html
+++ b/travel.html
@@ -25,7 +25,7 @@
   </head>
   
   <body>
-    <ul class="nav nav-pills nav-fill">
+    <ul class="nav nav-pills nav-fill primaryNav">
         <li class="nav-item">
             <a href="index.html">Home</a>
         </li>
@@ -55,6 +55,9 @@
         </li>
         <li class="nav-item">
             <a href="bootstrapdemo.html">Bootstrap Demo</a>
+        </li>
+        <li class="nav-item">
+            <a href="mediaQueryDemo.html">Media Query Demo</a>
         </li>
       </ul>
 
