--- a/unorderedlists.html
+++ b/unorderedlists.html
@@ -15,7 +15,7 @@
   </head>
   
   <body>
-    <ul class="nav nav-pills nav-fill">
+    <ul class="nav nav-pills nav-fill primaryNav">
       <li class="nav-item">
           <a href="index.html">Home</a>
       </li>
@@ -46,6 +46,9 @@
       <li class="nav-item">
           <a href="bootstrapdemo.html">Bootstrap Demo</a>
       </li>
+      <li class="nav-item">
+        <a href="mediaQueryDemo.html">Media Query Demo</a>
+        </li>
     </ul>
 
     <h1>This is a demo of a Bulleted List</h1>
