--- a/cssdemo.html
+++ b/cssdemo.html
@@ -21,7 +21,7 @@
         <link rel="stylesheet" href="navStyle.css">
   </head>
   <body>
-    <ul class="nav nav-pills nav-fill">
+    <ul class="nav nav-pills nav-fill primaryNav">
         <li class="nav-item">
             <a href="index.html">Home</a>
         </li>
@@ -51,6 +51,9 @@
         </li>
         <li class="nav-item">
             <a href="bootstrapdemo.html">Bootstrap Demo</a>
+        </li>
+        <li class="nav-item">
+            <a href="mediaQueryDemo.html">Media Query Demo</a>
         </li>
       </ul>
 
