--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   
   <body>
-    <ul class="nav nav-pills nav-fill">
+    <ul class="nav nav-pills nav-fill primaryNav">
       <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="index.html">Home</a>
       </li>
@@ -45,6 +45,9 @@
       </li>
       <li class="nav-item">
           <a href="bootstrapdemo.html">Bootstrap Demo</a>
+      </li>
+      <li class="nav-item">
+        <a href="mediaQueryDemo.html">Media Query Demo</a>
       </li>
     </ul>
 
