--- a/orderedlist.html
+++ b/orderedlist.html
@@ -14,7 +14,7 @@
 
   </head>
   <body>
-    <ul class="nav nav-pills nav-fill">
+    <ul class="nav nav-pills nav-fill primaryNav">
         <li class="nav-item">
             <a href="index.html">Home</a>
         </li>
@@ -44,6 +44,9 @@
         </li>
         <li class="nav-item">
             <a href="bootstrapdemo.html">Bootstrap Demo</a>
+        </li>
+        <li class="nav-item">
+            <a href="mediaQueryDemo.html">Media Query Demo</a>
         </li>
       </ul>
 
