--- a/textdemo.html
+++ b/textdemo.html
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <ul class="nav nav-pills nav-fill">
+    <ul class="nav nav-pills nav-fill primaryNav">
       <li class="nav-item">
           <a href="index.html">Home</a>
       </li>
@@ -45,6 +45,10 @@
       <li class="nav-item">
           <a href="bootstrapdemo.html">Bootstrap Demo</a>
       </li>
+      <li class="nav-item">
+        <a href="mediaQueryDemo.html">Media Query Demo</a>
+      </li>
+
     </ul>
     <center>
         <h1>This is a demo of different types of text in HTML</h1>
