final page updates

--- a/orderedlist.html
+++ b/orderedlist.html
@@ -50,6 +50,27 @@
         </li>
       </ul>
 
+      <!--secondary nav (small screen)-->
+    <div class="dropdown show secondaryNav">
+        <a class="btn btn-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Navigation List
+        </a>
+      
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <a class="dropdown-item" href="index.html">Home</a>
+          <a class="dropdown-item" href="headings.html">Heading Demo</a>
+          <a class="dropdown-item" href="textdemo.html">Text Demo</a>
+          <a class="dropdown-item" href="unorderedlists.html">Unordered List Demo</a>
+          <a class="dropdown-item active" href="orderedlist.html">Ordered List Demo</a>
+          <a class="dropdown-item" href="tableDemo1.html">Table Demo 1</a>
+          <a class="dropdown-item" href="tableDemo2.html">Table Demo 2 - Pets</a>
+          <a class="dropdown-item" href="cssdemo.html">CSS Demo</a>
+          <a class="dropdown-item" href="travel.html">Dream Vacation Page</a>
+          <a class="dropdown-item" href="bootstrapdemo.html">Bootstrap Demo</a>
+          <a class="dropdown-item" href="mediaQueryDemo.html">Media Query Demo</a>
+        </div>
+      </div>
+
     <h1>This is a demo of a Numbered List</h1>
     <ol>
         <li>Item</li>
