--- a/index.html
+++ b/index.html
@@ -51,6 +51,27 @@
       </li>
     </ul>
 
+    <!--secondary nav (small screen)-->
+    <div class="dropdown show secondaryNav">
+      <a class="btn btn-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Navigation List
+      </a>
+    
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+        <a class="dropdown-item active" href="index.html">Home</a>
+        <a class="dropdown-item" href="headings.html">Heading Demo</a>
+        <a class="dropdown-item" href="textdemo.html">Text Demo</a>
+        <a class="dropdown-item" href="unorderedlists.html">Unordered List Demo</a>
+        <a class="dropdown-item" href="orderedlist.html">Ordered List Demo</a>
+        <a class="dropdown-item" href="tableDemo1.html">Table Demo 1</a>
+        <a class="dropdown-item" href="tableDemo2.html">Table Demo 2 - Pets</a>
+        <a class="dropdown-item" href="cssdemo.html">CSS Demo</a>
+        <a class="dropdown-item" href="travel.html">Dream Vacation Page</a>
+        <a class="dropdown-item" href="bootstrapdemo.html">Bootstrap Demo</a>
+        <a class="dropdown-item" href="mediaQueryDemo.html">Media Query Demo</a>
+      </div>
+    </div>
+
     <p>Welcome to my website!</p>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
